--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -22,7 +22,7 @@
             <ul class="navbar-links">
                 <a href="/user"><li><i class="fa-solid fa-chart-line"></i><span>Overview</span></li></a>
                 <a href="/user/rotina"><li><i class="fa-solid fa-calendar"></i><span>Rotina</span></li></a>
-                <a href="/user/tarefas"><li><i class="fa-solid fa-list-check"></i><span>Tarefas</span></li></a>
+                <a href="/user/tarefas"><li><i class="fa-solid fa-clipboard-list"></i><span>Tarefas</span></li></a>
                 <a href="/user/pomodoro"><li><i class="fa-solid fa-hourglass-half"></i><span>Pomodoro</span></li>
                 <a href="/user/ai"><li><i class="fa-solid fa-brain"></i><span>Focão AI</span></li></a>
             </ul>
