falta apenas as conquistas

--- a/project/public/views/dashboard.html
+++ b/project/public/views/dashboard.html
@@ -259,7 +259,9 @@
                         <i class="fa-solid fa-calendar-day text-[--color-items-primary]"></i><h4 class="font-bold">Rotina de hoje</h4>
                     </div>
                 </div>
-                <div id="calendar" class="mt-5"></div>
+                <ul id="routineList"
+                    class="h-[380px] w-full overflow-y-auto list-none mt-5">
+                </ul>
             </div>
 
             <div class="flex flex-col bg-[var(--bg-primary)] rounded-[15px] p-5 select-none lg:col-span-6 col-span-1 transition duration-300 hover:shadow-xl">
