--- a/project/public/views/dashboard.html
+++ b/project/public/views/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Foca</title>
-    <link rel="shortcut icon" href="../imgs/foca_branco.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imgs/foca_icon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
@@ -373,7 +373,6 @@
     
     <script src="../scripts/dashboard.js"></script>
     <script src="../scripts/graficos-dashboard.js"></script>
-    <script src="../scripts/calendar-dashboard.js"></script>
     <script src="https://kit.fontawesome.com/c27d52a16d.js" crossorigin="anonymous"></script>
 </body>
 
