--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -5,7 +5,7 @@
 
     <meta charset='utf-8' />
     <title>Rotina - Foca</title>
-    <link rel="shortcut icon" href="../imgs/foca_branco.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../imgs/foca_icon.ico" type="image/x-icon">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales-all.global.min.js"></script>
