--- a/project/public/views/session.html
+++ b/project/public/views/session.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pomodoro Timer</title>
     <!-- <script src="../scripts/main-user.js"></script> -->
+     <link rel="shortcut icon" href="../imgs/foca_icon.ico" type="image/x-icon">
      <link rel="stylesheet" href="../styles/cores.css">
     <script src="../scripts/session-page.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
