outro commit de segurança

--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -30,6 +30,7 @@
         <div class="divider"></div>
         <nav class="navbar-insights">
             <ul class="navbar-links">
+                <a href="" id="profile-link"><li><i class="fa-solid fa-user"></i><span>Perfil</span></li></a>
                 <li><i class="fa-solid fa-gear"></i><span>Configurações</span></li>
                 <li><i class="fa-solid fa-right-from-bracket"></i><span>Sair</span></li>
              </ul>
