--- a/project/public/views/profile.html
+++ b/project/public/views/profile.html
@@ -22,6 +22,9 @@
             overflow: hidden;
         }
     </style>
+    <script>
+        if(!localStorage.getItem("token") || !sessionStorage.getItem("token")) window.location.href = '/auth'
+    </script>
 </head>
 <body class="bg-[--bg-second]">
     <div class="max-w-5xl mx-auto mt-8 bg-[--bg-primary] rounded-xl shadow-md overflow-hidden">
