--- a/project/public/views/session.html
+++ b/project/public/views/session.html
@@ -9,6 +9,9 @@
      <link rel="stylesheet" href="../styles/cores.css">
     <script src="../scripts/session-page.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        if(!localStorage.getItem("token") || !sessionStorage.getItem("token")) window.location.href = '/auth'
+    </script>
 </head>
 <body class="bg-[--color-items-second] text-white flex items-center justify-center h-screen">
     <div class="text-center">
