--- a/project/public/views/task.html
+++ b/project/public/views/task.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="/styles/overview.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
     <script src="../scripts/main-user.js"></script>
+    <script>
+        if(!localStorage.getItem("token") || !sessionStorage.getItem("token")) window.location.href = '/auth'
+    </script>
 </head>
 <body>
     <form>
