--- a/project/public/views/routine.html
+++ b/project/public/views/routine.html
@@ -11,6 +11,9 @@
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/locales-all.global.min.js"></script>
     <link rel="stylesheet" href="../styles/calendar.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&" />
+    <script>
+        if(!localStorage.getItem("token") && !sessionStorage.getItem("token")) window.location.href = '/auth'
+    </script>
   </head>
   <body class="big-sidebar">
     <aside class="sidebar-container">
